[package]
name = "music-tagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
rspotify = { version = "0.13.1", features = ["cli"]}
clap = {version = "4.5.4", features= ["derive"]}
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.14.0"}
tokio = { version = "1", features = ["full"] }
